# lab_automasion_OCR-module

./: .gitignore  AGENTS.md  README.md  main.py  ocr_vision_batch.py  ocr_vision_batch.sh  pyproject.toml
.github/workflows/: docs_book.yml  import_module_origin_audit.yml
_post_clone_assets/: README_POST_CLONE_ASSETS.md
_post_clone_assets/security_ops/: README_SECURITY_OFFLINE.md
_post_clone_assets/security_ops/reports/: pip_audit.txt  requirements.lock.txt  sbom.cdx.json  source_baseline.txt
_post_clone_assets/security_ops/scripts/: 01_record_source_baseline.sh  02_export_lock_and_reports.sh  03_build_wheelhouse.sh  prefetch_models.sh  run_paddleocr_offline.sh
docs/: ocr_accuracy_data_flow.md  ocr_source_case_workflow.md  ocr_support_algorithm_design.md
docs/_book/: lab_automasion_OCR-module_docs_book.md  lab_automasion_OCR-module_docs_report.json  lab_automation_OCR-module_docs_book.md  lab_automation_OCR-module_docs_report.json
docs/dev/notes/: DEVELOPER_GUIDE.md
ocr_dataset/: README.md  __init__.py
ocr_dataset/source_cases/img_0678/: roi_labels.json  rois.json
ocr_dataset/source_cases/img_0678/roi_strips/: strip_0001.txt  strip_0002.txt  strip_0003.txt  strip_0004.txt  strip_0005.txt  strip_0006.txt  strip_0007.txt  strip_0008.txt  strip_0009.txt  strip_0010.txt  strip_0011.txt  strip_0012.txt  strip_0013.txt  strip_0014.txt  strip_0015.txt  strip_0016.txt  strip_0017.txt  strip_0018.txt  strip_0019.txt  strip_0020.txt  strip_0021.txt  strip_0022.txt  strip_0023.txt  vision_ocr_summary.json
ocr_dataset/source_cases/img_0678____/: roi_labels.json
ocr_dataset/source_cases/img_0678____/roi_strips/: strip_0001.txt  strip_0002.txt  strip_0003.txt  strip_0004.txt  strip_0005.txt  strip_0006.txt  strip_0007.txt  strip_0008.txt  strip_0009.txt  strip_0010.txt  strip_0011.txt  strip_0012.txt  strip_0013.txt  strip_0014.txt  strip_0015.txt  strip_0016.txt  strip_0017.txt  strip_0018.txt  strip_0019.txt  strip_0020.txt  strip_0021.txt  strip_0022.txt  strip_0023.txt
ocr_dataset/source_cases/img_0685/: expected.txt  roi_labels.json  rois.json
ocr_dataset/source_cases/img_0685/roi_strips/: strip_0001.txt  strip_0002.txt  strip_0003.txt  strip_0004.txt  strip_0005.txt  strip_0006.txt  strip_0007.txt  strip_0008.txt  strip_0009.txt  strip_0010.txt  strip_0011.txt  vision_ocr_summary.json
ocr_dataset/src/ocr_dataset/: __init__.py  paths.py
ocr_dataset/src/ocr_dataset/exporters/: __init__.py  paddleocr_dataset.py
ocr_synthetic_data/: README.md
ocr_synthetic_data/src/ocr_synthetic_data/: __init__.py  augment.py  case_schema.py  export_paddleocr_dataset.py  generate_variants.py
ocr_wrapper/: README.md  __init__.py
ocr_wrapper/src/ocr_wrapper/: __init__.py  camera_ocr.py  camera_ocr_gui.py  image_processing.py  ocr_runtime.py  run_ocr.py  text_processing.py
ocr_wrapper/tests/: test_regression.py
ocr_wrapper/tests/golden/: README.md
scripts/docs/: build_docs_book.py
(+9 files in other folders)
